# src/routes/componentRouter.ts
@@ -5,6 +5,7 @@ import componentController from '../controllers/componentController'
 const componentRouter = Router()
 
 componentRouter.get('/', componentController.getComponents)
+componentRouter.get('/filter', componentController.filterComponent)
 componentRouter.get('/:name', componentController.getComponentByName)
 componentRouter.post('/', componentController.createComponent)
 componentRouter.put('/:name', componentController.updateComponent)
